# deciphon-old

./: .clang-format  .clangd  .env.example  .pre-commit-config.yaml  CMakeLists.txt  README.md  TODO.txt  array_size_field.h  cfg.h  chararray.c  chararray.h  codec.c  codec.h  db_prof_reader.c  db_prof_reader.h  db_prot_reader.c  db_prot_reader.h  db_prot_writer.c  db_prot_writer.h  db_reader.c  db_reader.h  db_types.h  db_writer.c  db_writer.h  dbl_fmt.h  dcp-config.cmake.in  deciphon-config.cmake.in  echo.c  echo.h  entry_dist.h  expect.c  expect.h  file-format.json  file-format.md  file-format.txt  fmt.c  fmt.h  fs.c  fs.h  h3reader.c  (+90 more)
.github/workflows/: cmake.yml  deploy.yml  test.yml
async_pressy/: pressy.c  work.c  work.h
async_scanny/: scanny.c  scanny2.c  state.c  work.c
cli/: CMakeLists.txt  bin_press.c  bin_server.c  cli.c  cli.h  cli_press.c  cli_server.c  progress_file.c  progress_file.h
cli/src/: bin_info.c  cli.c  cli.h  cli_info.c  cli_press.c  cli_scan.c  cli_server.c
cli/test/: CMakeLists.txt
cmake/: FindArgp.cmake  FindCK.cmake
common/: CMakeLists.txt
common/include/common/: bitops.h  bug.h  compiler.h  ilog2.h  limits.h  logger.h  rc.h  safe.h  to.h  xfile.h  xlimits.h  xmath.h
common/src/: logger.c  rc.c  safe.c  to.c  xfile.c
common/test/: CMakeLists.txt  xfile.c
core/: CMakeLists.txt  buff.c  dotenv.c  logger.c  nanoprintf.c  rc.c  strlcpy.c  to.c  xfile.c
core/src/: db.c  db_types.h  job_state.c  prod.c  prod.h  profile.h  profile_reader.h  protein_match.h  seq.c  server.c  server.h  standard_db.c  standard_match.h  to.c  tok.c  work.c
core/test/: helper.h  protein_model.c  protein_profile.c  standard_profile.c
db/: CMakeLists.txt  profile_reader.c  protein_reader.c  protein_writer.c  reader.c  writer.c
dcp/src/: cli.c  prod.h  profile.c  profile.h  profile_reader.c  progress_file.c  protein_hmmer3_reader.h  protein_node.h  row.h  work.c  (+2 more)
decy/: broker.c  broker.h  callbacks.h  cfg.c  cmd.c  command.c  command.h  decy.c  decy.h  msg.c  msg.h  schedy.c  schedy.h  session.c  session.h  strings.h
fuzz/: CMakeLists.txt  db_fuzz.c  db_seed.c
hmmy/: boot.c  boot.h  client.c  client.h  command.c  command.h  hmmer.c  hmmer.h  hmmy.c  hmmy.h  server.c  server.h  state.h
libs/: argless.c  argless.h  dotenv.c  fs.h  jx.c  jx.h  lazylog.c  lazylog.h  nanoprintf.h  sched_structs.h  xfile.c  xfile.h  xxhash.h  zc.c  zc.h  zc_string_static.h
model/: CMakeLists.txt  profile.c  protein_codec.c  protein_h3reader.c  protein_model.c  protein_profile.c  protein_state.c  standard_profile.c  standard_state.c
press/: press.c  press.h
pressy/: cmd.c  cmd.h  command.c  command.h  msg.c  msg.h  presser.c  presser.h  pressy.c  pressy.h  session.c  state.c  state.h  strings.h  work.c  work.h
rest/: .gitignore  Pipfile  build.py  build_ext.py  list_db.sh  main.py  pyproject.toml  submit_job.sh  test.py
rest/deciphon_rest/: __init__.py  _app.py  _db.py  _except.py  _job.py  _job_result.py  _logger.py  _prod.py  _sched.py  _seq.py  db.py  exception.py  interface.h  job.py  logger.py  prod.py  rc.py  sched.py  seq.py
scanny/: cmd.c  command.c  command.h  loop_while.h  msg.c  msg.h  scanner.c  scanner.h  scanny.c  scanny.h  session.c  session.h  work.c  work.h
sched/: CMakeLists.txt  api.c  curl_error.h  jsmn.h  sched.c  url.c  xcurl.c
sched/include/sched/: db.h  job.h  prod.h  sched.h  seq.h
sched/src/: db.c  db.h  job.c  job.h  prod.c  prod.h  sched.c  seq.c  seq.h  seq_queue.c  stmt.c  stmt.h  tok.c  xfile.c  xfile.h  xsql.c  xsql.h
sched/test/: CMakeLists.txt  sched.c
schedy/: api.c  api.h  cmd.c  command.c  command.h  http.c  http.h  http_headers.h  mime.h  msg.c  msg.h  schedy.c  schedy.h  strings.h  xcurl.c  xcurl.h  xcurl_error.h
server/: CMakeLists.txt  api.c  curl_error.h  file.c  file.h  hmm.c  hmm.h  hypothesis.h  job.c  job.h  job_state.h  jsmn_error.h  match.h  prod.c  prod.h  protein_match.c  protein_match.h  rest.c  rest_curl.c  rest_old.c  scan.c  scan.h  scan_thread.c  scan_thread.h  sched.c  sched_api.c  server.c  server.h  thread.c  thread.h  url.c  work.c  work.h  xcurl.c  xcurl_debug.c  xcurl_debug.h  xjson.c  xjson.h  xomp.h
src/: abc.h  annotate.c  api.c  array.c  array.h  as.c  as.h  atomic.h  basename.c  basename.h  bitops.c  bitops.h  bits.h  buff.c  buff.h  bug.h  bus.h  bzero.h  chdir.c  chdir.h  chrmap.c  chrmap.h  cli.c  cli.h  cli_daemon.c  cli_info.c  cli_info.h  cli_press.c  cli_press.h  cli_scan.c  cli_scan.h  cli_server.c  cli_server.h  clock.c  clock.h  cmd.c  cmp.c  compiler.h  cwd.c  cwd.h  (+333 more)
test/: .env.test  CMakeLists.txt  MANIFEST  PF02545.dcp.md5  cli_press.c  conn.bats  connection.sh  consensus.faa  data.c  data.h  db.c  db_normal.c  db_pp.c  db_pro.c  db_std.c  deciphon.cmake  decy.bats  helper.bash  helper.cmake  helper.h  hmm.sh  hmmer_client.c  hmmer_daemon.c  hmmer_server.c  hmmerd.c  hmmerd_client.c  integrated.c  job.c  manifest  metadata.c  minifam.dcp.md5  minifam.hmm.md5  model.c  normal_profile.c  pfam24.c  pfam24_results.c  pfam24_results.h  pp.c  press.c  pressy.bats  (+61 more)
test/pro/: db.c  model.c  profile.c  reader.c
test/src/: io.c  metadata.c  output.c  pfam24.c  pfam24_data.c  pfam24_data.h  pparr.h  server.c  tasks.c
test/tools/: CMakeLists.txt  abspath  dotenv_get.c  is_api_online  unittest
tools/: embed-file  update_schema_header
util/: CMakeLists.txt  bitops.c  logger.c  resolve_rc.c  strlcpy.c  to.c  xfile.c
worker/: CMakeLists.txt
worker/src/: buff.h  cmp_key.h  db.c  db.h  db_mt.c  db_mt.h  db_reader.c  db_reader.h  db_tmp.c  db_tmp.h  js.c  js.h  metadata.h  nuclt_dist.c  nuclt_dist.h  pool.h  prod.c  prod.h  profile_reader.c  profile_reader.h  progress_file.c  protein_codec.h  protein_db.c  protein_db.h  protein_hmmer3_reader.c  protein_hmmer3_reader.h  protein_match.c  protein_match.h  protein_model.c  protein_model.h  protein_profile.c  protein_profile.h  protein_state.h  rest.c  rest.h  row.h  seq.c  server.c  server.h  standard_db.c  (+14 more)
worker/test/: CMakeLists.txt  job.c  pfam24.c  pfam24_results.c  protein_db_examples.c  server.c  standard_db_examples.c
(+531 files in other folders)
