[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "deciphon_rest"
authors = [{ name = "Danilo Horta", email = "danilo.horta@pm.me" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = ["fastapi", "uvicorn", "cffi", "python-multipart"]

[project.urls]
Home = "http://github.com/EBI-Metagenomics/deciphon"
